# quine-mccluskey-petrick-agent

./: AGENT_MARKER_FEATURE.md  ANALYSIS_METHODOLOGY.md  BENCHMARK_FINDINGS.md  CLAUDE.md  CODE_ANALYSIS.md  Cargo.toml  DOCUMENTATION_UPDATES.md  INSTALL.md  LICENSE  MAX_16_BITS_SUMMARY.md  PERFORMANCE_FIX.md  PLAN_IF_THEN_ELSE_SIMPLIFICATION.md  README.md  RELEASE.md  REPO_DEPENDENCIES.md  SIMD_COVERAGE.md  install.bat  install.sh
.github/workflows/: release.yml
benches/: BENCHMARK_REPORT_MAX_16_BITS.md  MAX_16_BITS_BENCHMARK.md  README.md  RESULTS.md  cnf_to_dnf_bench.rs  encoding_bench.rs  gray_code_bench.rs  max_16_bits_bench.rs  min_cubes_bench.rs  setcover_bench.rs
benches/results/: ANALYSIS.md  comparison.txt  raw_16bit.txt  raw_32bit.txt
examples/: README.md  SLOW_EXAMPLES.md  benchmark_adaptive.rs  benchmark_real16.rs  benchmark_simd_coverage.rs  check_pi_structure.rs  check_simd_support.rs  cnf_2_dnf_0.rs  cnf_2_dnf_1.rs  cnf_2_dnf_2.rs  cnf_2_dnf_3.rs  cnf_2_dnf_4.rs  cnf_2_dnf_5.rs  cnf_2_dnf_very_hard.rs  cnf_auto_detect.rs  cnf_optimization_test.rs  compare_pi_gen.rs  comparison_operators.rs  dead_code_detection.rs  debug_pis.rs  input.json  qm_64bit.rs  qm_comparison_14bit.rs  qm_essential_implicants.rs  qm_krook_dataset.rs  qm_parity_8bit.rs  qm_petricks_method.rs  qm_random_12bit.rs  qm_simple_3bit.rs  qm_wolfram_verified.rs  simplify_if_then_else.rs  slow_16var_core.rs  slow_16var_problem.rs  test_64_vars.rs  test_cases.json  test_validation.rs  trace_dupes.rs  trace_raw.rs  unified_cnf_demo.rs
examples/agent/: README.md  REALWORLD_EXAMPLES.md  dead_code.json  go_api_validation.json  go_document_access.json  go_example.json  go_feature_access.json  go_saas_feature_flags.json  integer_comparison.json  simple.json
examples/agent/go/: LARGE_EXAMPLES.md  README.md  api_validation.go  document_access.go  feature_access.go  payment_gateway.go  saas_feature_flags.go
examples/cnf_2_dnf/: cnf_2_dnf_0.rs  cnf_2_dnf_1.rs  cnf_2_dnf_2.rs  cnf_2_dnf_3.rs  cnf_2_dnf_4.rs  cnf_2_dnf_5.rs  cnf_2_dnf_very_hard.rs
examples/qm/: qm_64bit.rs  qm_comparison_14bit.rs  qm_essential_implicants.rs  qm_krook_dataset.rs  qm_parity_8bit.rs  qm_petricks_method.rs  qm_random_12bit.rs  qm_simple_3bit.rs  qm_wolfram_verified.rs
scripts/: package-release.sh  run_max_16_bits_benchmark.bat  run_max_16_bits_benchmark.sh
src/: agent_api.rs  lib.rs  main.rs
src/cnf_dnf/: convert.rs  error.rs  mod.rs  optimized_for.rs  simd.rs  utils.rs
src/qm/: algorithm.rs  classic.rs  encoding.rs  generated_covers.rs  gray_code.rs  implicant.rs  minterm_set.rs  mod.rs  petricks.rs  petricks_method.rs  qm_result.rs  qm_solver.rs  quine_mccluskey.rs  random.rs  simd_coverage.rs  simd_gray_code.rs  solver.rs
src/qm/min_cubes/: comb.rs  mod.rs  multi_setcover.rs  primes.rs  primes_adaptive.rs  primes_eqmc.rs  setcover.rs
src/qm_solver/: mod.rs  petricks_method.rs  quine_mccluskey.rs
src/simplify/: analyzer.rs  comparisons.rs  dead_code.rs  mod.rs  optimizer.rs  parser.rs  types.rs
tests/: README.md  agent_api_tests.rs  cnf_dnf_consistency_tests.rs  cnf_dnf_minimal_tests.rs  cross_method_equality.rs  equality_tests.rs  integration_tests.rs  min_cubes_tests.rs  qm_min_cubes_equivalence.rs  test_gray_code_consistency.rs  test_simd_coverage.rs
