[package]
name = "qm-agent"
version = "0.1.0"
edition = "2024"
authors = ["Henk-Jan Lebbink <henkjan.lebbink@gmail.com>"]
description = "Quine-McCluskey Boolean minimization agent for Claude"

[[bin]]
name = "qm-agent"
path = "src/main.rs"

[lib]
name = "qm_agent"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"