[package]
name = "qm-agent"
version = "0.1.0"
edition = "2024"
authors = ["Henk-Jan Lebbink <henkjan.lebbink@gmail.com>"]
description = "Quine-McCluskey Boolean minimization agent for Claude"

[[bin]]
name = "qm-agent"
path = "src/main.rs"

[lib]
name = "qm_agent"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
anyhow = "1.0"
rand = "0.9.2"
bitwise-simd = { path = "C:/Source/Private/rust/bitwise-rust-agent/bitwise-simd", optional = true }

[features]
default = ["simd"]
simd = ["dep:bitwise-simd"]

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.7"

[[bench]]
name = "cnf_to_dnf_bench"
harness = false

[[bench]]
name = "encoding_bench"
harness = false