[package]
name = "qm-agent"
version = "0.1.0"
edition = "2024"
authors = ["Henk-Jan Lebbink <henkjan.lebbink@gmail.com>"]
description = "Quine-McCluskey Boolean minimization agent for Claude"

[[bin]]
name = "qm-agent"
path = "src/main.rs"

[lib]
name = "qm_agent"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
anyhow = "1.0"
rand = "0.9.2"
bitwise-simd = { path = "C:/Source/Private/rust/bitwise-rust-agent/bitwise-simd", optional = true }
rustc-hash = "2.1.1"
good_lp = { version = "1.14", optional = true, features = ["clarabel"] }
smallvec = "1.15.1"

[features]
default = ["simd", "mips"]
simd = ["dep:bitwise-simd"]
mips = ["dep:good_lp"]

[dev-dependencies]
tempfile = "3.23"
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.7"
proptest = "1.8"

[[example]]
name = "qm_64bit"
path = "examples/qm/qm_64bit.rs"

[[example]]
name = "qm_essential_implicants"
path = "examples/qm/qm_essential_implicants.rs"

[[example]]
name = "qm_comparison_14bit"
path = "examples/qm/qm_comparison_14bit.rs"

[[example]]
name = "qm_krook_dataset"
path = "examples/qm/qm_krook_dataset.rs"

[[example]]
name = "qm_parity_8bit"
path = "examples/qm/qm_parity_8bit.rs"

[[example]]
name = "qm_petricks_method"
path = "examples/qm/qm_petricks_method.rs"

[[example]]
name = "qm_random_12bit"
path = "examples/qm/qm_random_12bit.rs"

[[example]]
name = "qm_simple_3bit"
path = "examples/qm/qm_simple_3bit.rs"

[[example]]
name = "qm_wolfram_verified"
path = "examples/qm/qm_wolfram_verified.rs"

[[example]]
name = "cnf_2_dnf_0"
path = "examples/cnf_2_dnf/cnf_2_dnf_0.rs"

[[example]]
name = "cnf_2_dnf_1"
path = "examples/cnf_2_dnf/cnf_2_dnf_1.rs"

[[example]]
name = "cnf_2_dnf_2"
path = "examples/cnf_2_dnf/cnf_2_dnf_2.rs"

[[example]]
name = "cnf_2_dnf_3"
path = "examples/cnf_2_dnf/cnf_2_dnf_3.rs"

[[example]]
name = "cnf_2_dnf_4"
path = "examples/cnf_2_dnf/cnf_2_dnf_4.rs"

[[example]]
name = "cnf_2_dnf_5"
path = "examples/cnf_2_dnf/cnf_2_dnf_5.rs"

[[example]]
name = "cnf_2_dnf_very_hard"
path = "examples/cnf_2_dnf/cnf_2_dnf_very_hard.rs"

[[bench]]
name = "cnf_to_dnf_bench"
harness = false

[[bench]]
name = "encoding_bench"
harness = false

[[bench]]
name = "gray_code_bench"
harness = false

[[bench]]
name = "setcover_bench"
harness = false
required-features = ["mips"]

[[bench]]
name = "min_cubes_bench"
harness = false

